demo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinot-grafana-demo
  namespace: cell-9itmgf-default
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: pinot-grafana-demo
